[package]
name = "diablo2bot"
version = "0.1.0"
edition = "2021"
default-run = "diablo2bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mpq_reader = { path = "../mpq_reader" }
dc6_decoder = { path = "../dc6_decoder" }
dcc_decoder = { path = "../dcc_decoder" }
dt1_decoder = { path = "../dt1_decoder" }
enigo = "0.1.3"
nohash-hasher = "0.2.0"
png = "0.17.10"
scrap = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
winapi = { version = "0.3.9", features = ["winuser"] }
rand = "0.8.5"
encoding_rs = "0.8.34"
ahash = "0.8.11"
toml = "0.8.19"
strum = "0.26"
strum_macros = "0.26"
arrayvec = "0.7.6"
